[package]
name = "rloganalyzer"
version = "0.1.0"
authors = ["Per Böhlin <per.bohlin@devconsoft.se>"]
build = "build.rs"

[dependencies]
clap = {version="2.31", features = ["yaml"]}
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

[build-dependencies]
clap = {version="2.31", features = ["yaml"]}

[dev-dependencies]
unindent = "0.1"
